# topology

./: .gitignore  ARCHIVE.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.agents/skills/topology/: CONVENTION.md  REFERENCE.md  SKILL.md
roadmap/: CONVENTION-zh.md  abstration_discussion.md  abstration_manifesto.md  context-link-design.md  query.md  scan.md  selection.md  stage-1.md  topo-robustness-analysis.md
src/: add.rs  archive.rs  context.rs  dedup.rs  delete.rs  diff.rs  graph.rs  main.rs  output.rs  query.rs  resolve.rs  serve.rs  status.rs  unarchive.rs  update.rs
src/ops/: add.rs  archive.rs  delete.rs  mod.rs  unarchive.rs  update.rs
src/scan/: directory.rs  markdown.rs  mod.rs
web/: index.html
